--- a/src/style/global.css
+++ b/src/style/global.css
@@ -7,6 +7,32 @@
 
 body {
   scroll-behavior: smooth;
-  background: rgb(65,65,65);
+  background: rgb(65, 65, 65);
   overflow-x: hidden;
+}
+
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #414141FF;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #4F4F4F;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #484848;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 35px;
+  background-color: #333333;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #2b2b2b;
 }
